feat: 新增代码编译异常处理和权限限制